changed index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,24 +5,37 @@
     });
   </script>
 <% end %>
-<h2>Products</h2>
 
-<ul>
-  <% @products.each do |product| %>
-    <li><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %></li>
-  <% end %>
-</ul>
+<p id="notice"><%= notice %></p>
 
-<hr>
+<h1>Options</h1>
 
-<h2>Webhooks</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Auto complete</th>
+      <th>Validate address</th>
+      <th>Pobox warning</th>
+      <th>Streetnum warning</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<% if @webhooks.present? %>
-  <ul>
-    <% @webhooks.each do |webhook| %>
-      <li><%= webhook.topic %> : <%= webhook.address %></li>
+  <tbody>
+    <% @options.each do |option| %>
+      <tr>
+        <td><%= option.auto_complete %></td>
+        <td><%= option.validate_address %></td>
+        <td><%= option.pobox_warning %></td>
+        <td><%= option.streetnum_warning %></td>
+        <td><%= link_to 'Show', option %></td>
+        <td><%= link_to 'Edit', edit_option_path(option) %></td>
+        <td><%= link_to 'Destroy', option, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
     <% end %>
-  </ul>
-<% else %>
-  <p>This app has not created any webhooks for this Shop. Add webhooks to your ShopifyApp initializer if you need webhooks</p>
-<% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Option', new_option_path %>
