--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,6 @@
   </script>
 <% end %>
 
-<h1>Options for <%= @shop %> </h1>
+<h1>Options for <%= @shop.name %> </h1>
 
 <%= render 'options/form', option: @option %>
