--- a/app/views/options/edit.html.erb
+++ b/app/views/options/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Option</h1>
+<p id="notice"><%= notice %></p>
 
 <%= render 'form', option: @option %>
-
-<%= link_to 'Show', @option %> |
-<%= link_to 'Back', options_path %>
