--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,27 +6,22 @@
   </script>
 <% end %>
 
-<%= render 'options/form', option: @option %>
-
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'options')">London</button>
+  <button class="tablinks" onclick="openCity(event, 'custom_color_text')">Paris</button>
+  <button class="tablinks" onclick="openCity(event, 'help')">Tokyo</button>
 </div>
 
-<div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+<div id="options" class="tabcontent">
+  <%= render 'options/form', option: @option %>
 </div>
 
-<div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p> 
+<div id="custom_color_text" class="tabcontent">
+  <h3>Customize text and color</h3>  
 </div>
 
-<div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+<div id="Help" class="tabcontent">
+  <h3>Instruction</h3>  
 </div>
 
 <script>
