--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,9 +7,9 @@
 <% end %>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'options')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'custom_color_text')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'help')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'options')">Features</button>
+  <button class="tablinks" onclick="openCity(event, 'custom_color_text')">Customize</button>
+  <button class="tablinks" onclick="openCity(event, 'help')">Help</button>
 </div>
 
 <div id="options" class="tabcontent">
