--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'options')">Features</button>
+  <button class="tablinks active" onclick="openCity(event, 'options')">Features</button>
   <button class="tablinks" onclick="openCity(event, 'custom_color_text')">Customize</button>
   <button class="tablinks" onclick="openCity(event, 'help')">Help</button>
 </div>
