--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
   <button class="tablinks" onclick="openCity(event, 'help')">Help</button>
 </div>
 
-<div id="options" class="tabcontent">
+<div id="options" class="tabcontent" style="display:block">
   <%= render 'options/form', option: @option %>
 </div>
 
