--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
   <h3>Customize text and color</h3>  
 </div>
 
-<div id="Help" class="tabcontent">
+<div id="help" class="tabcontent">
   <h3>Instruction</h3>  
 </div>
 
