changed partial name

--- a/app/views/home/_colorpicker.html.erb
+++ b/app/views/home/_colorpicker.html.erb
@@ -1,14 +1,14 @@
 <h3>Customize text and color</h3>  
 
-  <p>Color1:
+  <p>Background:
   <input class="jscolor {onFineChange:'update(this, 1)'}" value="cc66ff">
   <p id="rect1" style="border:1px solid gray; width:161px; height:100px;">
 
-  <p>Color2:
+  <p>Text:
   <input class="jscolor {onFineChange:'update(this, 2)'}" value="cc66ff">
   <p id="rect2" style="border:1px solid gray; width:161px; height:100px;">
 
-  <p>Color3:
+  <p>Border:
   <input class="jscolor {onFineChange:'update(this, 3)'}" value="cc66ff">
   <p id="rect3" style="border:1px solid gray; width:161px; height:100px;">
 
