--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div id="custom_color_text" class="tabcontent">
-  <%= render 'colorpicker' %>
+  <%= render 'customizations/form', customization: @customization %>
 </div>
 
 <div id="help" class="tabcontent">
