--- a/app/views/customizations/edit.html.erb
+++ b/app/views/customizations/edit.html.erb
@@ -1,3 +1,33 @@
-<h1>Editing Customization</h1>
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'options')">Features</button>
+  <button class="tablinks active" onclick="openCity(event, 'custom_color_text')">Customize</button>
+  <button class="tablinks" onclick="openCity(event, 'help')">Help</button>
+</div>
 
-<%= render 'form', customization: @customization %>
+<div id="options" class="tabcontent">
+  <%= render 'options/form', option: @option %>
+</div>
+
+<div id="custom_color_text" class="tabcontent" style="display:block">
+  <%= render 'customizations/form', customization: @customization %>
+</div>
+
+<div id="help" class="tabcontent">
+  <h3>Instruction</h3>  
+</div>
+
+<script>
+  function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
+</script>
