fix options controller

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,9 @@
   </script>
 <% end %>
 
+<%= render 'options/edit', option: @option %>
+
+<!--
 <div class="tab">
   <button class="tablinks active" onclick="openCity(event, 'options')">Features</button>
   <button class="tablinks" onclick="openCity(event, 'custom_color_text')">Customize</button>
@@ -39,3 +42,4 @@
     evt.currentTarget.className += " active";
   }
 </script>
+-->
