fix template index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,9 @@
   </script>
 <% end %>
 
-<%= render 'options/edit', option: @option %>
+<%= render template: 'options/edit', option: @option %>
+
+
 
 <!--
 <div class="tab">
