--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/nav' %>
 <%= form_with(model: option, local: true) do |form| %>
   <% if option.errors.any? %>
     <div id="error_explanation">
