--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -1,4 +1,7 @@
 <%= render 'layouts/nav' %>
+
+<p id="notice"><%= notice %></p>
+
 <%= form_with(model: option, local: true) do |form| %>
   <% if option.errors.any? %>
     <div id="error_explanation">
