--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,11 +22,14 @@ li a {
 li a:hover {
     background-color: #111;
 }
+
+.active {
+    background-color: #4CAF50;
+}
 </style>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a class="active" href="#home">Options</a></li>
+  <li><a href="#news">Customize</a></li>  
   <li><a href="#about">About</a></li>
 </ul>
