--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,6 +35,6 @@ li a:visited {
 
 <ul>
   <li><a class="active" href="#home">Options</a></li>
-  <li><a href="#news">Customize</a></li>  
+  <li><a href="<%= edit_customization_path(id: 1)%>">Customize</a></li>  
   <li><a href="#about">About</a></li>
 </ul>
