add custom menu

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -34,7 +34,7 @@ li a:visited {
 </style>
 
 <ul>
-  <li><a class="active" href="#home">Options</a></li>
-  <li><a href="<%= edit_customization_path(id: 1)%>">Customize</a></li>  
+  <li><a class="active" href="<%= root_path %>">Options</a></li>
+  <li><a href="<%= custom_path %>">Customize</a></li>  
   <li><a href="#about">About</a></li>
 </ul>
