fix custom menu

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,6 +35,6 @@ li a:visited {
 
 <ul>
   <li><a class="active" href="<%= root_path %>">Options</a></li>
-  <li><a href="<%= custom_path %>">Customize</a></li>  
+  <li><a href="<%= customize_path %>">Customize</a></li>  
   <li><a href="#about">About</a></li>
 </ul>
