--- a/app/views/customizations/_form.html.erb
+++ b/app/views/customizations/_form.html.erb
@@ -1,3 +1,6 @@
+<%= render 'layouts/nav' %>
+<p id="notice"><%= notice %></p>
+
 <%= form_with(model: customization, local: true) do |form| %>
   <% if customization.errors.any? %>
     <div id="error_explanation">
